pandas steps for AI/ML projects

--- a/notebooks/pandas.ipynb
+++ b/notebooks/pandas.ipynb
@@ -6620,8 +6620,8 @@
    "source": [
     "**Steps to Work with Datasets Using Pandas**\n",
     "- *Install and Import Pandas*\n",
-    "- *Install Pandas: pip install pandas*\n",
-    "- *Import Pandas: import pandas as pd*\n",
+    "- *Install Pandas: ```pip install pandas```*\n",
+    "- *Import Pandas: ```import pandas as pd```*\n",
     "- *Load the Dataset*\n",
     "\n",
     "     - Use ```pd.read_csv()```, ```pd.read_excel()```, or ```pd.read_json()``` to load the dataset.\n",
@@ -6666,23 +6666,23 @@
     "\n",
     "   - *Separate features* $(X)$ *and target* $(y)$.\n",
     "\n",
-    "Use train_test_split() to split into training and testing sets.\n",
+    "   - *Use ```train_test_split()``` to split into training and testing sets*.\n",
     "\n",
-    "Save the Processed Dataset\n",
+    "- *Save the Processed Dataset*\n",
     "\n",
-    "Save to CSV: .to_csv()\n",
+    "   - *Save to CSV*: ```.to_csv()```\n",
     "\n",
-    "Save to Excel: .to_excel()\n",
+    "   - *Save to Excel*: ```.to_excel()```\n",
     "\n",
-    "Additional Tips\n",
+    "**Additional Tips**\n",
     "\n",
-    "Visualize data using Matplotlib or Seaborn.\n",
+    "* *Visualize data using Matplotlib or Seaborn.*\n",
     "\n",
-    "Handle outliers using statistical methods.\n",
+    "* *Handle outliers using statistical methods.*\n",
     "\n",
-    "Perform feature selection using correlation or feature importance.\n",
+    "* *Perform feature selection using correlation or feature importance.*\n",
     "\n",
-    "These steps provide a structured workflow for preparing datasets for AI/ML projects using Pandas."
+    "These steps provide a structured workflow for preparing datasets for **AI/ML projects** using ```pandas```."
    ]
   },
   {
