--- a/notebooks/MySQL_db.ipynb
+++ b/notebooks/MySQL_db.ipynb
@@ -4,6 +4,136 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***Beginner Level: Foundations***\n",
+    "- *CREATE DATABASE: Creating databases.*\n",
+    "- *USE: Selecting a database.*\n",
+    "- *CREATE TABLE: Creating tables with columns and data types.*\n",
+    "- *Common data types: INT, VARCHAR, DATE, DECIMAL, TEXT.*\n",
+    "- *ALTER TABLE: Modifying table structures (adding, removing, changing columns).*\n",
+    "- *DROP TABLE: Deleting tables.*\n",
+    "- *DROP DATABASE: Deleting databases.*\n",
+    "\n",
+    "**Basic SQL Commands (Data Manipulation Language - DML):**\n",
+    "- *INSERT: Adding data into tables.*\n",
+    "- *SELECT: Retrieving data from tables.*\n",
+    "- WHERE: Filtering data based on conditions.*\n",
+    "- UPDATE: Modifying existing data.*\n",
+    "- DELETE: Removing data from tables.*\n",
+    "\n",
+    "**Basic SELECT Queries:**\n",
+    "- *Selecting specific columns.*\n",
+    "- *Using * to select all columns.*\n",
+    "- *Ordering results using ORDER BY.*\n",
+    "- *Limiting results using LIMIT.*\n",
+    "- *Using DISTINCT to get unique values.*\n",
+    "\n",
+    "**Advanced Level: Mastering MySQL**\n",
+    "\n",
+    "1. **Stored Procedures and Functions:**\n",
+    "\n",
+    "* *Creating stored procedures: CREATE PROCEDURE.*\n",
+    "* *Creating functions: CREATE FUNCTION.*\n",
+    "* *Using parameters and variables.*\n",
+    "* *Control flow: IF, CASE, WHILE, LOOP.*\n",
+    "\n",
+    "2. **Triggers:**\n",
+    "\n",
+    "* *Creating triggers: CREATE TRIGGER.*\n",
+    "* *Understanding trigger events: BEFORE INSERT, AFTER UPDATE, etc.*\n",
+    "* *Using triggers for auditing and data validation.*\n",
+    "* *Performance Tuning:*\n",
+    "\n",
+    "3. **Query optimization: EXPLAIN statement.**\n",
+    "* *Index optimization.*\n",
+    "* *MySQL configuration tuning.*\n",
+    "* *Understanding the query cache.*\n",
+    "* *Profiling queries.*\n",
+    "* *Using slow query logs.*\n",
+    "\n",
+    "4. **Security:**\n",
+    "User management: CREATE USER, GRANT, REVOKE.\n",
+    "Understanding privileges.\n",
+    "Securing MySQL installations.\n",
+    "SSL/TLS encryption.\n",
+    "Replication and High Availability:\n",
+    "\n",
+    "Master-slave replication.\n",
+    "Understanding replication topologies.\n",
+    "MySQL Group Replication.\n",
+    "Backups and recovery.\n",
+    "Partitioning:\n",
+    "\n",
+    "Horizontal partitioning.\n",
+    "Vertical partitioning.\n",
+    "Range, list, hash, and key partitioning.\n",
+    "Partition management.\n",
+    "Advanced Data Types and Features:\n",
+    "\n",
+    "JSON data type and functions.\n",
+    "Spatial data types and functions.\n",
+    "Full-text search.\n",
+    "Window functions.\n",
+    "MySQL Ecosystem and Tools:\n",
+    "\n",
+    "MySQL Shell.\n",
+    "MySQL Router.\n",
+    "MySQL Connectors.\n",
+    "Cloud based MySQL services."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Working with databases (mysql) to get data from tables"
    ]
   },
