--- a/notebooks/MySQL_db.ipynb
+++ b/notebooks/MySQL_db.ipynb
@@ -27,6 +27,49 @@
     "- *Limiting results using LIMIT.*\n",
     "- *Using DISTINCT to get unique values.*\n",
     "\n",
+    "**Intermediate Level: Expanding Your Skills**\n",
+    "\n",
+    "1. **Advanced SELECT Queries:**\n",
+    "\n",
+    "* *Aggregate functions: COUNT, SUM, AVG, MIN, MAX.*\n",
+    "* *GROUP BY: Grouping data based on columns.*\n",
+    "* *HAVING: filtering grouped data.*\n",
+    "* *Joins: INNER JOIN, LEFT JOIN, RIGHT JOIN, FULL OUTER JOIN.*\n",
+    "* *Subqueries: Queries within queries.*\n",
+    "\n",
+    "2. **Constraints:**\n",
+    "\n",
+    "* *PRIMARY KEY: Uniquely identifying rows.*\n",
+    "* *FOREIGN KEY: Establishing relationships between tables.*\n",
+    "* *UNIQUE: Ensuring unique values in columns.*\n",
+    "* *NOT NULL: Preventing null values.*\n",
+    "* *CHECK: Enforcing data integrity.*\n",
+    "\n",
+    "3. **Indexes:**\n",
+    "\n",
+    "* *Understanding the purpose of indexes.*\n",
+    "* *Creating indexes: CREATE INDEX.*\n",
+    "* *Types of indexes: B-tree, hash.*\n",
+    "* *Knowing when and how to use indexes for performance.*\n",
+    "\n",
+    "4. **Views:**\n",
+    "\n",
+    "* *Creating and using views: CREATE VIEW.*\n",
+    "* *Understanding the benefits of views.*\n",
+    "* *Updating and deleting views.*\n",
+    "\n",
+    "5. **Transactions:**\n",
+    "\n",
+    "* *Understanding ACID properties (Atomicity, Consistency, Isolation, Durability).*\n",
+    "* *START TRANSACTION, COMMIT, ROLLBACK.*\n",
+    "* *Managing concurrent access.*\n",
+    "\n",
+    "6. **Data Types Deep Dive:**\n",
+    "\n",
+    "* *Understanding the different nuances of numeric, string, date, and time datatypes.*\n",
+    "* *Choosing the optimal datatype for each column.*\n",
+    "* *Converting data types.*\n",
+    "\n",
     "**Advanced Level: Mastering MySQL**\n",
     "\n",
     "1. **Stored Procedures and Functions:**\n",
