--- a/notebooks/MySQL_db.ipynb
+++ b/notebooks/MySQL_db.ipynb
@@ -94,84 +94,39 @@
     "* *Using slow query logs.*\n",
     "\n",
     "4. **Security:**\n",
-    "User management: CREATE USER, GRANT, REVOKE.\n",
-    "Understanding privileges.\n",
-    "Securing MySQL installations.\n",
-    "SSL/TLS encryption.\n",
-    "Replication and High Availability:\n",
+    "* *User management: CREATE USER, GRANT, REVOKE.*\n",
+    "* *Understanding privileges.*\n",
+    "* *Securing MySQL installations.*\n",
+    "* *SSL/TLS encryption.*\n",
     "\n",
-    "Master-slave replication.\n",
-    "Understanding replication topologies.\n",
-    "MySQL Group Replication.\n",
-    "Backups and recovery.\n",
-    "Partitioning:\n",
+    "5. **Replication and High Availability:**\n",
     "\n",
-    "Horizontal partitioning.\n",
-    "Vertical partitioning.\n",
-    "Range, list, hash, and key partitioning.\n",
-    "Partition management.\n",
-    "Advanced Data Types and Features:\n",
+    "* *Master-slave replication.*\n",
+    "* *Understanding replication topologies.*\n",
+    "* *MySQL Group Replication.*\n",
+    "* *Backups and recovery.*\n",
     "\n",
-    "JSON data type and functions.\n",
-    "Spatial data types and functions.\n",
-    "Full-text search.\n",
-    "Window functions.\n",
-    "MySQL Ecosystem and Tools:\n",
+    "6. **Partitioning:**\n",
     "\n",
-    "MySQL Shell.\n",
-    "MySQL Router.\n",
-    "MySQL Connectors.\n",
-    "Cloud based MySQL services."
+    "* *Horizontal partitioning.*\n",
+    "* *Vertical partitioning.*\n",
+    "* *Range, list, hash, and key partitioning.*\n",
+    "* *Partition management.*\n",
+    "\n",
+    "7. **Advanced Data Types and Features:**\n",
+    "\n",
+    "* *JSON data type and functions.*\n",
+    "* *Spatial data types and functions.*\n",
+    "* *Full-text search.*\n",
+    "* *Window functions.*\n",
+    "\n",
+    "8. **MySQL Ecosystem and Tools:**\n",
+    "\n",
+    "* *MySQL Shell.*\n",
+    "* *MySQL Router.*\n",
+    "* *MySQL Connectors.*\n",
+    "* *Cloud based MySQL services.*"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
