--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -388,6 +388,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input, please try again!\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    age = int(input(\"Enter your age:\"))\n",
+    "    if (age >= 21):\n",
+    "        print('You are allowed to drink!')\n",
+    "    else:\n",
+    "        print('You are NOT allowed to drink!')\n",
+    "except ValueError:\n",
+    "    print('Invalid input, please try again!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input! Please enter a valid integer.\n",
+      "Invalid input! Please enter a valid integer.\n",
+      "You are allowed to drink!\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    try:\n",
+    "        age = int(input(\"Enter your age: \"))\n",
+    "        if age < 0:\n",
+    "            print(\"Age cannot be negative!\")\n",
+    "        elif age > 120:\n",
+    "            print(\"Please enter a realistic age!\")\n",
+    "        elif age >= 21:\n",
+    "            print('You are allowed to drink!')\n",
+    "        else:\n",
+    "            print('You are NOT allowed to drink!')\n",
+    "        break  # Exit the loop if input is valid\n",
+    "    except ValueError:\n",
+    "        print(\"Invalid input! Please enter a valid integer.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Other user\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_email = input(\"Enter your email id:\")\n",
+    "if 'gmail' in user_email:\n",
+    "    print('This is gmail user')\n",
+    "elif 'hotmail' in user_email:\n",
+    "    print('This is hotmail user')\n",
+    "elif 'yahoo' in user_email:\n",
+    "    print('Thsi is yahoo user')\n",
+    "else:\n",
+    "    print('Other user')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = [1,4, 5,8,9,6,12]\n",
+    "len(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A.index(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 6, 12]"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A[-3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
