--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -148,9 +148,416 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data.txt\n",
+      "file.txt\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls = ['df.csv','data.txt','data.csv','file.csv','file.txt']\n",
+    "for i in ls:\n",
+    "    if '.txt' in i:\n",
+    "        print(i)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 2 is an even number\n",
+      "The number 4 is an even number\n",
+      "The number 6 is an even number\n",
+      "The number 8 is an even number\n",
+      "The number 10 is an even number\n",
+      "The number 12 is an even number\n",
+      "The number 14 is an even number\n",
+      "The number 16 is an even number\n",
+      "The number 18 is an even number\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = list(range(1,20))\n",
+    "for i in l:\n",
+    "    if i%2==0:\n",
+    "        print(f\"The number {i} is an even number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is less than 5\n",
+      "1 is less than 5\n",
+      "2 is less than 5\n",
+      "3 is less than 5\n",
+      "4 is less than 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "begin = 0\n",
+    "while begin<5:\n",
+    "    print(f\"{begin} is less than 5\")\n",
+    "    begin+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrong password! Please try again!\n",
+      "Wrong password! Please try again!\n",
+      "Wrong password! Please try again!\n",
+      "You successfuly logged in!\n"
+     ]
+    }
+   ],
+   "source": [
+    "passwrd = input(\"Enter your password:\")\n",
+    "while passwrd != 'book':\n",
+    "    print('Wrong password! Please try again!')\n",
+    "    passwrd = input(\"Enter your password:\")    \n",
+    "print(\"You successfuly logged in!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls = ['10','20','30']\n",
+    "ps = []\n",
+    "for i in ls:\n",
+    "    ps.append(int(i))\n",
+    "print(ps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 20, 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Sum of N Natural Numbers**\n",
+    "- *Write a program that takes an integer n as input and prints the sum of the first n natural numbers using a loop.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class solu():\n",
+    "    def sumOfFirst(self,n):\n",
+    "        num = list(i for i in range(1,n+1))\n",
+    "        sumOf = sum(num)\n",
+    "        return sumOf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solu().sumOfFirst(n=6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Reverse a String**\n",
+    "- *Given a string, write a program to reverse it using a loop (without using slicing or built-in functions like reversed()).*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverseString(s):\n",
+    "    n = len(s)\n",
+    "    reve = ''\n",
+    "    for i in range(0,n+1):\n",
+    "        reve[0]= (n+1)\n",
+    "        i-=1\n",
+    "    return reve\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'r'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f ='my daughter'\n",
+    "f[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g=''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[56], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(f)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,n):\n\u001b[1;32m----> 3\u001b[0m     \u001b[43mg\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m f[(n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m-\u001b[39mi]\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(g)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "f ='my daughter'\n",
+    "n = len(f)\n",
+    "for i in range(0,n):\n",
+    "    g[i] = f[(n-1)-i]\n",
+    "print(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rethguad ym\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = 'my daughter'\n",
+    "n = len(f)\n",
+    "g = [''] * n \n",
+    "\n",
+    "for i in range(n):\n",
+    "    g[i] = f[(n-1)-i] \n",
+    "\n",
+    "g = ''.join(g)\n",
+    "print(g)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(0,5))\n",
+    "len(range(0,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "?gniog uoy era erehw\n"
+     ]
+    }
+   ],
+   "source": [
+    "g = \"where are you going?\"\n",
+    "n = len(g)\n",
+    "f = ['']*n\n",
+    "for i in range(n):\n",
+    "    f[i] = g[(n-1)-i]\n",
+    "f = ''.join(f)\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sumFistN(n):\n",
+    "    sum = 0\n",
+    "    for i in range(1,n+1):\n",
+    "        sum+=i\n",
+    "    print(f\"The sum of the first {n} natural numbers is: {sum}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sum of the first 6 natural numbers is: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "sumFistN(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Lists: Mutable sequence of items, append, remove, replace, index, slicing, splitting, \n",
+    "* Strings: immutable sequence of characters. Access items using indexing and splitting, formatting\n",
+    "* tuples: immutable sequence of items within () containing any data type items\n",
+    "* sets: unordered collection of unique items, remove, add, but no duplicates\n",
+    "* Dictionaries: A collection of key-value pairs. Access using key rather than indexing\n",
+    "* int: Integers type datatype\n",
+    "* floating: Decimal type data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FizzBuzz\n",
+    "Print numbers from 1 to 100, but:\n",
+    "\n",
+    "For multiples of 3, print \"Fizz\" instead of the number.\n",
+    "For multiples of 5, print \"Buzz\".\n",
+    "For numbers that are multiples of both 3 and 5, print \"FizzBuzz\"."
+   ]
   }
  ],
  "metadata": {
