--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -551,13 +551,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FizzBuzz\n",
-    "Print numbers from 1 to 100, but:\n",
-    "\n",
-    "For multiples of 3, print \"Fizz\" instead of the number.\n",
-    "For multiples of 5, print \"Buzz\".\n",
-    "For numbers that are multiples of both 3 and 5, print \"FizzBuzz\"."
+    "**Print numbers from 1 to 100, but:**\n",
+    "- *For multiples of 3, print \"Fizz\" instead of the number.*\n",
+    "- *For multiples of 5, print \"Buzz\".*\n",
+    "- *For numbers that are multiples of both 3 and 5, print \"FizzBuzz\".*"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
