--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -558,8 +558,140 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 1 is not divisible by 3 or 5\n",
+      "The number 2 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 4 is not divisible by 3 or 5\n",
+      "Buzz\n",
+      "Fizz\n",
+      "The number 7 is not divisible by 3 or 5\n",
+      "The number 8 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "Buzz\n",
+      "The number 11 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 13 is not divisible by 3 or 5\n",
+      "The number 14 is not divisible by 3 or 5\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "The number 16 is not divisible by 3 or 5\n",
+      "The number 17 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 19 is not divisible by 3 or 5\n",
+      "Buzz\n",
+      "Fizz\n",
+      "The number 22 is not divisible by 3 or 5\n",
+      "The number 23 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "Buzz\n",
+      "The number 26 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 28 is not divisible by 3 or 5\n",
+      "The number 29 is not divisible by 3 or 5\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "The number 31 is not divisible by 3 or 5\n",
+      "The number 32 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 34 is not divisible by 3 or 5\n",
+      "Buzz\n",
+      "Fizz\n",
+      "The number 37 is not divisible by 3 or 5\n",
+      "The number 38 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "Buzz\n",
+      "The number 41 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 43 is not divisible by 3 or 5\n",
+      "The number 44 is not divisible by 3 or 5\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "The number 46 is not divisible by 3 or 5\n",
+      "The number 47 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 49 is not divisible by 3 or 5\n",
+      "Buzz\n",
+      "Fizz\n",
+      "The number 52 is not divisible by 3 or 5\n",
+      "The number 53 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "Buzz\n",
+      "The number 56 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 58 is not divisible by 3 or 5\n",
+      "The number 59 is not divisible by 3 or 5\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "The number 61 is not divisible by 3 or 5\n",
+      "The number 62 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 64 is not divisible by 3 or 5\n",
+      "Buzz\n",
+      "Fizz\n",
+      "The number 67 is not divisible by 3 or 5\n",
+      "The number 68 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "Buzz\n",
+      "The number 71 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 73 is not divisible by 3 or 5\n",
+      "The number 74 is not divisible by 3 or 5\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "The number 76 is not divisible by 3 or 5\n",
+      "The number 77 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 79 is not divisible by 3 or 5\n",
+      "Buzz\n",
+      "Fizz\n",
+      "The number 82 is not divisible by 3 or 5\n",
+      "The number 83 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "Buzz\n",
+      "The number 86 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 88 is not divisible by 3 or 5\n",
+      "The number 89 is not divisible by 3 or 5\n",
+      "FizzBuzz\n",
+      "Fizz\n",
+      "The number 91 is not divisible by 3 or 5\n",
+      "The number 92 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "The number 94 is not divisible by 3 or 5\n",
+      "Buzz\n",
+      "Fizz\n",
+      "The number 97 is not divisible by 3 or 5\n",
+      "The number 98 is not divisible by 3 or 5\n",
+      "Fizz\n",
+      "Buzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,101):\n",
+    "    if (i%3==0) and (i%5==0):\n",
+    "        print('FizzBuzz')\n",
+    "    if (i%3==0):\n",
+    "        print('Fizz')\n",
+    "    elif (i%5==0):\n",
+    "        print('Buzz')\n",
+    "    else:\n",
+    "        print(f\"The number {i} is not divisible by 3 or 5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
