--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -688,6 +688,167 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Prime Number Checker**\n",
+    "- *Write a program that takes an integer n as input and checks if it is a prime number using a loop.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isPrime(n):\n",
+    "    if n%2==0:\n",
+    "        print(f\"Yes! {n} is a prime number\")\n",
+    "    else:\n",
+    "        print(f\"The number {n} is not prime number\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 5 is not prime number\n"
+     ]
+    }
+   ],
+   "source": [
+    "isPrime(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Pattern Printing**\n",
+    "- Write a program to print the following pattern for n rows:\n",
+    "- ``` * ```\n",
+    "- ``` ** ```\n",
+    "- ``` *** ```\n",
+    "- ``` **** ```\n",
+    "- ``` ***** ```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pattern(n):\n",
+    "    for i in range(n+1):\n",
+    "        print('*'*i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n"
+     ]
+    }
+   ],
+   "source": [
+    "pattern(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grade = 3.5\n",
+    "makeit = 'Yes' if grade > 3.0 else 'No' # inline if syntax: 'do this' if 'this is true' else 'do this'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(makeit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Write a program that checks whether the variable is an integer datatype, and convert it to an integer if it is not. Then print out the value of the variable.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isInt(b):\n",
+    "    if type(b)==int:\n",
+    "        return True\n",
+    "    else:\n",
+    "        int(b)\n",
+    "        print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isInt(6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a program that prompts the user to enter their email address. Then check whether this is a gmail, hotmail, yahoo, or other user.\n",
+    "\n",
+    "If the user is a gmail user, print out the message This is a gmail user. Follow the same concept for the other email types of email accounts. If the user is neither gmail, hotmail, nor yahoo, print out This is another user."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
