--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -843,9 +843,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program that prompts the user to enter their email address. Then check whether this is a gmail, hotmail, yahoo, or other user.\n",
+    "- *Write a program that prompts the user to enter their email address. Then check whether this is a gmail, hotmail, yahoo, or other user.*\n",
     "\n",
-    "If the user is a gmail user, print out the message This is a gmail user. Follow the same concept for the other email types of email accounts. If the user is neither gmail, hotmail, nor yahoo, print out This is another user."
+    "- *If the user is a gmail user, print out the message This is a gmail user. Follow the same concept for the other email types of email accounts. If the user is neither gmail, hotmail, nor yahoo, print out This is another user.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The user is Gmail user\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = input(\"Enter your email id:\")\n",
+    "if 'gmail' in user:\n",
+    "    print('The user is Gmail user')\n",
+    "elif 'hotmail' in user:\n",
+    "    print('The user is Hotmail')\n",
+    "elif 'yahoo' in user:\n",
+    "    print('The user is Yahoo user')\n",
+    "else:\n",
+    "    print('Other user')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Print a even number between 1 and 20*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[x for x in range(1,21) if x%2==0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 0 is even\n",
+      "The number 2 is even\n",
+      "The number 4 is even\n",
+      "The number 6 is even\n",
+      "The number 8 is even\n",
+      "The number 10 is even\n",
+      "The number 12 is even\n",
+      "The number 14 is even\n",
+      "The number 16 is even\n",
+      "The number 18 is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 0\n",
+    "while i < 20:\n",
+    "    if i%2==0:\n",
+    "        print(f\"The number {i} is even\")\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Print a PRIME numbers between 1 and 20*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math as m\n",
+    "def isPrime(n):\n",
+    "    n = int(input(\"Enter an integer:\"))\n",
+    "    for i in range(2, m.sqrt(n)+1 ):\n",
+    "        if n%i==0:\n",
+    "            print(f\"{n} is not prime\")\n",
+    "        else:\n",
+    "            print(f\"{n} is a prime number\")\n",
+    "\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 is prime\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as m\n",
+    "\n",
+    "n = int(input(\"Enter an integer:\"))\n",
+    "is_prime = True\n",
+    "\n",
+    "for i in range(2,int( m.sqrt(n)+1 )):\n",
+    "    if n%i==0:\n",
+    "        print(f\"{n} is not prime\")\n",
+    "        is_prime = False\n",
+    "        break\n",
+    "if is_prime:\n",
+    "    print(f\"{n} is prime\")"
    ]
   },
   {
