--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -338,106 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def reverseString(s):\n",
-    "    n = len(s)\n",
-    "    reve = ''\n",
-    "    for i in range(0,n+1):\n",
-    "        reve[0]= (n+1)\n",
-    "        i-=1\n",
-    "    return reve\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sum(num)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'r'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f ='my daughter'\n",
-    "f[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g=''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'str' object does not support item assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[56], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(f)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m0\u001b[39m,n):\n\u001b[1;32m----> 3\u001b[0m     \u001b[43mg\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m f[(n\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m-\u001b[39mi]\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(g)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'str' object does not support item assignment"
-     ]
-    }
-   ],
-   "source": [
-    "f ='my daughter'\n",
-    "n = len(f)\n",
-    "for i in range(0,n):\n",
-    "    g[i] = f[(n-1)-i]\n",
-    "print(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -981,6 +882,65 @@
     "        break\n",
     "if is_prime:\n",
     "    print(f\"{n} is prime\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Write a while loop to check password of a user*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You successfully logged in:jesuslovesu\n"
+     ]
+    }
+   ],
+   "source": [
+    "passwrd = input(\"Enter your password:\")\n",
+    "while passwrd != 'jesuslovesu':\n",
+    "    print(f\"Wrong password!{passwrd} Please try again!\")\n",
+    "    passwrd = input(\"Enter your password:\")\n",
+    "print(f\"You successfully logged in:{passwrd}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Print full days name from monday to friday using the following list*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls = [\"Mon\",\"Tues\",\"Wednes\",\"Thurs\",\"Fri\",\"Satur\",\"Sun\"]\n",
+    "weekday = ls[:5]\n",
+    "for i in weekday:\n",
+    "    print(i+'day')"
    ]
   },
   {
