--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -944,6 +944,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Let’s suppose the 1st of January for year x is Monday. Count how many Mondays are there in a year, given that year x has 365 days.*\n",
+    "- *Hint: Consider using a range and a len function.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "year = list(range(0,365))\n",
+    "for i in year:\n",
+    "    if i % 7 == 0:\n",
+    "        year[i] = 'Monday'\n",
+    "        i+=7\n",
+    "\n",
+    "print(year.count('Monday'))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
