--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -975,6 +975,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Consider this list of names:*\n",
+    "```python\n",
+    "names = [\"johnsmith\",\"jacksmith\",\"georgesmith\"]\n",
+    "```\n",
+    "- *Write a program that generates this list: ```['johnsmith@gmail.com', 'jacksmith@gmail.com', 'georgesmith@gmail.com']```*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "johnsmith@gmail.com\n",
+      "jacksmith@gmail.com\n",
+      "georgesmith@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "names =[\"johnsmith\",\"jacksmith\",\"georgesmith\"]\n",
+    "for i in names:\n",
+    "    print(\"{0}@gmail.com\".format(i))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
